# 2023-hong-kong-workspace

./: .gitignore  devenv.nix  go.work  pyproject.toml
advent-of-code/day-01/part-01/: part1.py  puzzle.md
advent-of-code/day-01/part-02/: part2.py  puzzle.md
advent-of-code/day-02/part-01/: part1.py  test_parsing.py
advent-of-code/day-02/part-02/: gameparser.py  part2.py
advent-of-code/day-03/part-01/: part1.py  partsparser.py
advent-of-code/day-03/part-02/: part2.py  partsparser.py  puzzle.md  solution.py  ui.py
advent-of-code/day-04/part-01/: part1.py
advent-of-code/day-04/part-02/: cardparser.py  part2.py  puzzle.md
advent-of-code/day-05/part-01/: almanacparser.py  part1.py
advent-of-code/day-05/part-02/: .gitignore  almanacparser.py  build.zig  example.json  go.mod  input.json  main.go  part2.py
advent-of-code/day-05/part-02/src/: main.zig
advent-of-code/day-06/part-01/: .gitignore  example.json  go.mod  input.json  main.go  puzzle.md
advent-of-code/day-06/part-02/: .gitignore  example.json  go.mod  input.json  main.go  puzzle.md
advent-of-code/day-07/part-01/: cardparser.py  puzzle.md
advent-of-code/day-07/part-02/: cardparser.py
advent-of-code/day-08/part-01/: part1.py  puzzle.md
advent-of-code/day-08/part-02/: .gitignore  example.json  go.mod  input.json  main.go  part2.py  part2_numba.py  puzzle.md
advent-of-code/day-09/part-01/: part1.py
advent-of-code/day-09/part-02/: part2.py  puzzle.md
advent-of-code/day-10/part-01/: part1.py  puzzle.md  ui.py
