[tool.poetry]
name = "hong-kong"
version = "0.1.0"
description = "Hong Kong trip workspace"
authors = ["Michael Twomey <mick@twomeylee.name>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
textual = "^0.44.1"
rich = "^13.7.0"
typer = "^0.9.0"
pydantic = "^2.5.2"
fastapi = "^0.104.1"
polars = "^0.19.19"
duckdb = "^0.9.2"  # 0.9.2 doesn't support python 3.12
structlog = "^23.2.0"
parsy = "^2.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.7.1"
ruff = "^0.1.7"
pytest = "^7.4.3"
py-spy = "^0.3.14"
pyinstrument = "^4.6.1"
textual-dev = "^1.2.1"
ipython = "^8.18.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
